<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textSize="20dp"
    />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_hint"
    />

    <Button
        android:id="@+id/button_cambiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_buttton"
    />

    <Button
        android:id="@+id/button_nuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_buttton"
        />

</android.support.v7.widget.LinearLayoutCompat>